--- a/tasks/gitlab_runner_pre.yml
+++ b/tasks/gitlab_runner_pre.yml
@@ -1,6 +1,5 @@
 ---
 - name: Run script for check before install Gitlab CI multi runner
-  command: >
-    curl -L {{ gitlab_runner_script_url }} | bash
+  shell: "curl -L {{ gitlab_runner_script_url }} | bash"
   when:
     - gitlab_runner_script_url is defined
