--- a/tasks/gitlab_runner_pre.yml
+++ b/tasks/gitlab_runner_pre.yml
@@ -2,16 +2,16 @@
 - name: Download script for check before install Gitlab Runner (Ubuntu/Debian)
   get_url:
     url: "{{ gitlab_runner_apt_script_url }}"
-    dest: /opt/gitlab-install.sh
+    dest: /tmp/gitlab-install.sh
     mode: 0755
   when: ansible_os_family == 'Debian'
 
 - name: Download script for check before install Gitlab Runner (CentOS/RHEL)
   get_url:
     url: "{{ gitlab_runner_yum_script_url }}"
-    dest: /opt/gitlab-install.sh
+    dest: /tmp/gitlab-install.sh
     mode: 0755
   when: ansible_os_family == 'RedHat'
 
 - name: Execute script to install GitLab Runner
-  shell: /opt/gitlab-install.sh
+  shell: /tmp/gitlab-install.sh
