[ADD] Test tools & [UPDATE] modules to Ansible Collection

--- a/tasks/gitlab_runner_install.yml
+++ b/tasks/gitlab_runner_install.yml
@@ -1,5 +1,5 @@
 ---
 - name: Install Gitlab Runner
-  package:
+  ansible.builtin.package:
     name: "{{ gitlab_runner_package }}"
     state: present
